Redesigned. Can now click on dates on the calendar. Planned workouts now show up on calendar and in dayPlan

--- a/client/userPage.html
+++ b/client/userPage.html
@@ -13,7 +13,6 @@
         <div class="header">
             <img id="profilePhoto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIZXN6BXkQE5CB_pLtHGAdr1klm3uox1Ja2A&s" alt="">
             <h1 id="profileName">Username</h1>
-            <h1 id="add">Add a Workout</h1>
         </div>
         <div class="banners">
             <h1>My Training Log</h1>
@@ -27,14 +26,18 @@
             <div class="calendar" id="calendar"></div>
         </div>
     </div>
-    <div class="categoryContainer">
-        <div class="categories"></div>
+    <div class="dayPlan" id="dayPlan">
+        <div class="planHeader">
+            <h3 id="planDate">Date Here</h3>
+            <h3 id="addWorkout">Add Workout</h3>
+        </div>
+        <div class="planContent" id="planContent"></div>
     </div>
-    <div class="subcategoryContainer">
-        <div class="subcategories"></div>
+    <div class="categoryContainer" id="categoryContainer">
+        <div class="categories" id="categories"></div>
     </div>
-    <div class="workoutContainer">
-        <div class="workouts"></div>
+    <div class="workoutContainer" id="workoutContainer">
+        <div class="workouts" id="workouts"></div>
     </div>
 </body>
 </html>
