almost done with being able to log workouts

--- a/client/userPage.html
+++ b/client/userPage.html
@@ -26,7 +26,7 @@
                 <h2 id="currentMonth"></h2>
                 <button id="nextMonth">&gt;</button>
             </div>
-            <!-- <div class="planCalendar" id="planCalendar"></div> -->
+            <div class="calendar" id="calendar"></div>
         </div>
     </div>
     <div class="dayPlan" id="dayPlan">
