log calendar functionality finished

--- a/client/userPage.html
+++ b/client/userPage.html
@@ -37,6 +37,13 @@
         </div>
         <div class="planContent" id="planContent"></div>
     </div>
+    <div class="dayLog" id="dayLog">
+        <button id="logExit" type="button">Exit</button>
+        <div class="logHeader">
+            <h3 id="logDate">Date Here</h3>
+        </div>
+        <div class="logContent" id="logContent"></div>
+    </div>
     <div class="categoryContainer" id="categoryContainer">
         <button id="categoryExit" type="button">Exit</button>
         <div class="categories" id="categories"></div>
