Last style changes before presenting

--- a/client/login.html
+++ b/client/login.html
@@ -4,12 +4,13 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="login.js"></script>
     <link rel="stylesheet" href="login.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Climbing_Workout_Tracker</title>
 </head>
 <body>
-    <h1>Site Name</h1>
+    <h1>Pace Training</h1>
     <div class="container">
         <form id="login">
             <div class="form">
