--- a/client/userPage.html
+++ b/client/userPage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Page</title>
     <link rel="stylesheet" href="userPage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script defer src="userPage.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
